<resources>
    <string name="app_name" translatable="false">BaseDatos</string>
    <string name="app_nombre" translatable="false">nombre</string>
    <string name="app_apellido" translatable="false">apellido</string>
    <string name="app_direccion" translatable="false">direccion</string>
    <string name="app_telefono" translatable="false">telefono</string>
    <string name="app_reg" translatable="false">Registrar</string>
    <string name="app_datos" translatable="false">Subir</string>
    <string name="app_correo" translatable="false">correo electronico</string>
    <string name="app_pass" translatable="false">contraseña</string>
    <string name="app_aut" translatable="false">Ingresar</string>
    <string name="app_log" translatable="false">Login</string>



    <string-array name="sec">
        <item>Seleccione</item>
        <item>a</item>
        <item>b</item>
        <item>c</item>

    </string-array>


    <string name="app_nameRegistro" translatable="false">Campañas Nacionales MINSA</string>
    <string name="app_nameIniciarSesion" translatable="false">INICIAR SESION</string>
    <string name="app_nameInvitado" translatable="false">Invitado</string>

    <string name="app_nameIniciarSesion2" translatable="false">Iniciar Sesion</string>
    <string name="app_nameUsuario" translatable="false">Correo Electronico</string>
    <string name="app_namecontrasseñas" translatable="false">Contraseñas</string>
    <string name="app_nameRcontraseñas" translatable="false">Recordar Contraseña</string>

    <string name="app_nameRegUsuario" translatable="false">Registro Usuario</string>
    <string name="app_nameNombre" translatable="false">Nombre Completo</string>
    <string name="app_nameBarrio" translatable="false">Barrio/Distrito</string>
    <string name="app_nameMunicipio" translatable="false">Municipio</string>
    <string name="app_nameDepartamento" translatable="false">Departamento</string>
    <string name="app_namecCorreo" translatable="false">Correo</string>
    <string name="app_nameContraseña" translatable="false">Contraseña</string>
    <string name="app_nameRContraseña" translatable="false">Repetir_Contraseña</string>

    //Directorio
    <string name="app_nameDirectorio" translatable="false">Directorio Centro Medico</string>

    //Consulta
    <string name="app_nameConsulta" translatable="false">Consulta</string>

    <string-array name="app_nameConsulta">
        <item>Seleccione</item>
        <item>Especialidad</item>
        <item>Examen</item>
    </string-array>


</resources>
